cleanup and reduced number of settings validations

--- a/styles.css
+++ b/styles.css
@@ -55,3 +55,54 @@ small.media-db-plugin-list-text{
 .media-db-plugin-spacer {
 	margin-bottom: 10px;
 }
+
+/* region property mappings */
+.media-db-plugin-property-mappings-model-container {
+	border:        1px solid var(--background-modifier-border);
+	border-radius: 5px;
+	padding:       10px;
+	width:         100%;
+}
+
+.media-db-plugin-property-mappings-container {
+	margin:         10px 0;
+	display:        flex;
+	flex-direction: column;
+	gap:            5px;
+}
+
+.media-db-plugin-property-mapping-element {
+	display:        flex;
+	flex-direction: row;
+	gap:            10px;
+}
+
+.media-db-plugin-property-mapping-element-property-name-wrapper {
+	min-width:     160px;
+	background:    var(--background-modifier-form-field);
+	padding:       2px 5px;
+	border-radius: 5px;
+
+	display:       flex;
+	align-items:   center;
+}
+
+.media-db-plugin-property-mapping-element-property-name {
+	margin: 0;
+}
+
+.media-db-plugin-property-mappings-save-button {
+	margin: 0;
+}
+
+.media-db-plugin-property-mapping-to {
+	display:     flex;
+	align-items: center;
+}
+
+.media-db-plugin-property-mapping-validation {
+	color:         var(--text-error);
+	margin-bottom: 5px;
+}
+
+/* endregion */
